syntax = "proto3";
package auth;

option java_package = "com.github.dpalmasan.auth";


service AuthService {
    rpc ValidateToken(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
    string token = 1;
}

message TokenResponse {
    bool success = 1;
}
